--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,3 +46,8 @@ flutter:
       fonts:
         - asset: lib/fonts/fa-thin-100.ttf
           weight: 100
+
+    - family: FontAwesomeSharpSolid
+      fonts:
+        - asset: lib/fonts/fa-sharp-solid-900.ttf
+          weight: 900
